--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "dateformat": "^3.0.3",
     "ejs": "^3.1.5",
