--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
+    "node-jsencrypt": "^1.0.0",
     "node-schedule": "^1.3.2",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.4.14",
